--- a/AbstractDishShop/AbstractDishShopServiceImplementList/AbstractDishShopServiceImplementList.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceImplementList/AbstractDishShopServiceImplementList.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Implementations\DishServiceList.cs" />
     <Compile Include="Implementations\MainServiceList.cs" />
     <Compile Include="Implementations\MaterialsServiceList.cs" />
+    <Compile Include="Implementations\StockServiceList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
