--- a/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B6FEFA94-5659-4E78-B920-7188568A2325}</ProjectGuid>
+    <ProjectGuid>{9F844B14-9500-4BAC-9FBF-0ADFDEFA2862}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AbstractDishShopModel</RootNamespace>
-    <AssemblyName>AbstractDishShopModel</AssemblyName>
+    <RootNamespace>AbstractDishShopServiceImplementDataBase</RootNamespace>
+    <AssemblyName>AbstractDishShopServiceImplementDataBase</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -48,19 +48,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dish.cs" />
-    <Compile Include="DishMaterials.cs" />
-    <Compile Include="Materials.cs" />
+    <Compile Include="AbstractDbContext.cs" />
+    <Compile Include="DishServiceDB.cs" />
+    <Compile Include="MainServiceDB.cs" />
+    <Compile Include="MaterialsServiceDB.cs" />
+    <Compile Include="Migrations\201903291943147_FirstMigration.cs" />
+    <Compile Include="Migrations\201903291943147_FirstMigration.Designer.cs">
+      <DependentUpon>201903291943147_FirstMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SClient.cs" />
-    <Compile Include="SOrder.cs" />
-    <Compile Include="SOrderStatus.cs" />
-    <Compile Include="Stock.cs" />
-    <Compile Include="StockMaterials.cs" />
+    <Compile Include="SClientServiceDB.cs" />
+    <Compile Include="StockServiceDB.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\AbstractDishShopModel\AbstractDishShopModel.csproj">
+      <Project>{B6FEFA94-5659-4E78-B920-7188568A2325}</Project>
+      <Name>AbstractDishShopModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AbstractDishShopServiceDAL\AbstractDishShopServiceDAL.csproj">
+      <Project>{2A03C236-3E71-46EB-AC6B-8B4DEED6AADF}</Project>
+      <Name>AbstractDishShopServiceDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201903291943147_FirstMigration.resx">
+      <DependentUpon>201903291943147_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
