--- a/AbstractDishShop/AbstractDishShopView_/AbstractDishShopView.csproj
+++ b/AbstractDishShop/AbstractDishShopView_/AbstractDishShopView.csproj
@@ -33,7 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
@@ -162,6 +169,10 @@
     <ProjectReference Include="..\AbstractDishShopServiceDAL\AbstractDishShopServiceDAL.csproj">
       <Project>{2A03C236-3E71-46EB-AC6B-8B4DEED6AADF}</Project>
       <Name>AbstractDishShopServiceDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AbstractDishShopServiceImplementDataBase\AbstractDishShopServiceImplementDataBase.csproj">
+      <Project>{9F844B14-9500-4BAC-9FBF-0ADFDEFA2862}</Project>
+      <Name>AbstractDishShopServiceImplementDataBase</Name>
     </ProjectReference>
     <ProjectReference Include="..\AbstractDishShopServiceImplementList\AbstractDishShopServiceImplementList.csproj">
       <Project>{DBFB764D-A2EB-45B0-8122-B3A34249237E}</Project>
