--- a/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\201903291943147_FirstMigration.Designer.cs">
       <DependentUpon>201903291943147_FirstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905310948330_NewMigr.cs" />
+    <Compile Include="Migrations\201905310948330_NewMigr.Designer.cs">
+      <DependentUpon>201905310948330_NewMigr.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -99,6 +103,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201903291943147_FirstMigration.resx">
       <DependentUpon>201903291943147_FirstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905310948330_NewMigr.resx">
+      <DependentUpon>201905310948330_NewMigr.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
