--- a/AbstractDishShop/AbstractDishShopModel/AbstractDishShopModel.csproj
+++ b/AbstractDishShop/AbstractDishShopModel/AbstractDishShopModel.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Materials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SClient.cs" />
+    <Compile Include="Implementer.cs" />
     <Compile Include="SOrder.cs" />
     <Compile Include="SOrderStatus.cs" />
     <Compile Include="Stock.cs" />
