--- a/AbstractDishShop/AbstractDishShopRestApi/AbstractDishShopRestApi.csproj
+++ b/AbstractDishShop/AbstractDishShopRestApi/AbstractDishShopRestApi.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Controllers\DishController.cs" />
     <Compile Include="Controllers\MaterialsController.cs" />
     <Compile Include="Controllers\SClientController.cs" />
+    <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\SMainController.cs" />
     <Compile Include="Controllers\SReportController.cs" />
     <Compile Include="Controllers\StockController.cs" />
@@ -121,6 +122,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WorkSImplementer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
