--- a/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BindingModels\ReportBindingModel.cs" />
     <Compile Include="BindingModels\SClientBindingModel.cs" />
     <Compile Include="BindingModels\SClientSOrdersModel.cs" />
+    <Compile Include="BindingModels\ImplementerBindingModel.cs" />
     <Compile Include="BindingModels\SOrderBindingModel.cs" />
     <Compile Include="BindingModels\StockBindingModel.cs" />
     <Compile Include="BindingModels\StockMaterialsBindingModel.cs" />
@@ -56,12 +57,14 @@
     <Compile Include="Interfaces\IMainService.cs" />
     <Compile Include="Interfaces\IMaterialsService.cs" />
     <Compile Include="Interfaces\ISClientService.cs" />
+    <Compile Include="Interfaces\IImplementerService.cs" />
     <Compile Include="Interfaces\IStockService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\DishMaterialsViewModel.cs" />
     <Compile Include="ViewModel\DishViewModel.cs" />
     <Compile Include="ViewModel\MaterialsViewModel.cs" />
     <Compile Include="ViewModel\SClientViewModel.cs" />
+    <Compile Include="ViewModel\ImplementerViewModel.cs" />
     <Compile Include="ViewModel\SOrderViewModel.cs" />
     <Compile Include="ViewModel\StockMaterialsViewModel.cs" />
     <Compile Include="ViewModel\StockViewModel.cs" />
