--- a/AbstractDishShop/AbstractDishShopRestApi/AbstractDishShopRestApi.csproj
+++ b/AbstractDishShop/AbstractDishShopRestApi/AbstractDishShopRestApi.csproj
@@ -113,6 +113,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DishController.cs" />
     <Compile Include="Controllers\MaterialsController.cs" />
+    <Compile Include="Controllers\MessageInfoController.cs" />
     <Compile Include="Controllers\SClientController.cs" />
     <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\SMainController.cs" />
