--- a/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BindingModels\DishBindingModel.cs" />
     <Compile Include="BindingModels\DishMaterialsBindingModel.cs" />
     <Compile Include="BindingModels\MaterialsBindingModel.cs" />
+    <Compile Include="BindingModels\MessageInfoBindingModel.cs" />
     <Compile Include="BindingModels\ReportBindingModel.cs" />
     <Compile Include="BindingModels\SClientBindingModel.cs" />
     <Compile Include="BindingModels\SClientSOrdersModel.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Interfaces\IDishService.cs" />
     <Compile Include="Interfaces\IMainService.cs" />
     <Compile Include="Interfaces\IMaterialsService.cs" />
+    <Compile Include="Interfaces\IMessageInfoService.cs" />
     <Compile Include="Interfaces\ISClientService.cs" />
     <Compile Include="Interfaces\IImplementerService.cs" />
     <Compile Include="Interfaces\IStockService.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="ViewModel\DishMaterialsViewModel.cs" />
     <Compile Include="ViewModel\DishViewModel.cs" />
     <Compile Include="ViewModel\MaterialsViewModel.cs" />
+    <Compile Include="ViewModel\MessageInfoViewModel.cs" />
     <Compile Include="ViewModel\SClientViewModel.cs" />
     <Compile Include="ViewModel\ImplementerViewModel.cs" />
     <Compile Include="ViewModel\SOrderViewModel.cs" />
