--- a/AbstractDishShop/AbstractDishShopModel/AbstractDishShopModel.csproj
+++ b/AbstractDishShop/AbstractDishShopModel/AbstractDishShopModel.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Dish.cs" />
     <Compile Include="DishMaterials.cs" />
     <Compile Include="Materials.cs" />
+    <Compile Include="MessageInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SClient.cs" />
     <Compile Include="Implementer.cs" />
