--- a/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceImplementDataBase/AbstractDishShopServiceImplementDataBase.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -64,6 +65,7 @@
     <Compile Include="IReportService.cs" />
     <Compile Include="MainServiceDB.cs" />
     <Compile Include="MaterialsServiceDB.cs" />
+    <Compile Include="MessageInfoServiceDB.cs" />
     <Compile Include="Migrations\201903291943147_FirstMigration.cs" />
     <Compile Include="Migrations\201903291943147_FirstMigration.Designer.cs">
       <DependentUpon>201903291943147_FirstMigration.cs</DependentUpon>
