--- a/AbstractDishShop/AbstractDishShopView_/AbstractDishShopView.csproj
+++ b/AbstractDishShop/AbstractDishShopView_/AbstractDishShopView.csproj
@@ -133,6 +133,12 @@
     <Compile Include="FormImplementer.Designer.cs">
       <DependentUpon>FormImplementer.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMails.Designer.cs">
+      <DependentUpon>FormMails.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +187,7 @@
     <Compile Include="FormStocksLoad.Designer.cs">
       <DependentUpon>FormStocksLoad.cs</DependentUpon>
     </Compile>
+    <Compile Include="MailClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
