--- a/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
+++ b/AbstractDishShop/AbstractDishShopServiceDAL/AbstractDishShopServiceDAL.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributies\CustomInterfaceAttribute.cs" />
+    <Compile Include="Attributies\CustomMethodAttribute.cs" />
     <Compile Include="BindingModels\DishBindingModel.cs" />
     <Compile Include="BindingModels\DishMaterialsBindingModel.cs" />
     <Compile Include="BindingModels\MaterialsBindingModel.cs" />
